[FIX] list 변환 방식 collect로 수정 (#643)